--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -66,8 +66,8 @@ const year = new Date().getFullYear();
                 </a>
               </li>
               <li>
-                <a href={`/${lang}/who-i-am`} title={t('who')} class="text-gray-700 transition hover:opacity-75 dark:text-white">
-                  {t('who')}
+                <a href={`/${lang}/work-experience`} title={t('experience')} class="text-gray-700 transition hover:opacity-75 dark:text-white">
+                  {t('experience')}
                 </a>
               </li>
               <li>
