--- a/src/pages/[lang]/blog/[category]/[slug].astro
+++ b/src/pages/[lang]/blog/[category]/[slug].astro
@@ -45,6 +45,7 @@ const { Content } = await post.render();
   title={`${title} | Kevin Fiorentino`}
   description={`${description}`}
   image={``}
+  addWidth={true}
 >
   <section class="grid grid-cols-3 gap-5">
 
