--- a/src/pages/[lang]/blog/[category]/index.astro
+++ b/src/pages/[lang]/blog/[category]/index.astro
@@ -38,6 +38,7 @@ const post = Astro.props;
   title={`Blog ${param.category} | Kevin Fiorentino`}
   description={`Kevin Fiorentino's blog about ${post.category}`}
   image={``}
+  addWidth={true}
 >
   <div>
     <p class="dark:text-white">Blog</p>
