--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -29,6 +29,7 @@ const { collections } = Astro.props;
   title={`Blog | Kevin Fiorentino`}
   description={`Kevin Fiorentino's personal blog`}
   image={``}
+  addWidth={true}
 >
   <h1 class="text-gradient">
     Blog
