--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -23,7 +23,8 @@ export async function getStaticPaths() {
 <MainLayout
   title={`${t('contact')} | Kevin Fiorentino`}
   description={t('contact.description')}
-  image=''
+  image={``}
+  addWidth={true}
 >
   <section>
     <h1 class="text-gradient">
