--- a/src/pages/[lang]/tags/index.astro
+++ b/src/pages/[lang]/tags/index.astro
@@ -41,7 +41,8 @@ const tags = Astro.props.tags;
 <MainLayout
   title={`Tags | Kevin Fiorentino`}
   description={`Kevin Fiorentino's tags`}
-  image=''
+  image={``}
+  addWidth={true}
 >
   <h1 class="text-gradient">
     Tags
