--- a/src/pages/[lang]/work-experience.astro
+++ b/src/pages/[lang]/work-experience.astro
@@ -24,6 +24,7 @@ export async function getStaticPaths() {
   title={`${t('experience')} | Kevin Fiorentino`}
   description={t('experience.description')}
   image={``}
+  addWidth={true}
 >
   <h1 class="text-gradient">
     {t('experience')}
