--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,6 +6,7 @@ import MainLayout from '@layouts/MainLayout.astro';
   title={`Page not found | Kevin Fiorentino`}
   description={`Page not found`}
   image={``}
+  addWidth={true}
 >
   <h1 class="sr-only">
     404
