--- a/src/pages/[lang]/tags/[tag].astro
+++ b/src/pages/[lang]/tags/[tag].astro
@@ -70,6 +70,7 @@ const props = Astro.props;
   title={`Blog ${param.tag} | Kevin Fiorentino`}
   description={`Kevin Fiorentino's blog about ${param.tag}`}
   image={``}
+  addWidth={true}
 >
   <div>
     <p class="dark:text-white">Tag</p>
