--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -25,9 +25,7 @@ const urlWithoutLang = currentUrl.slice(4);   // Remove /{lang}/
   top: calc(50% - 100px);
   right: 5px;
   box-shadow: 0px 3px 6px #00000029;
-}
-#language-picker ul {
-
+  z-index: 1;
 }
 #language-picker li a {
   font-size: 20px;
