--- a/src/pages/[lang]/tags/[tag].astro
+++ b/src/pages/[lang]/tags/[tag].astro
@@ -19,7 +19,7 @@ export async function getStaticPaths() {
 
   const pages: any[] = [];
 
-  let allPosts: any[] = []
+  let allPosts: any[] = [];
   let tags: string[] = [];
 
   // Get all tags on every category
