--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -70,10 +70,10 @@ const day = pubDate.getDate();
     line-height: 30px;
   }
   &.card-background {
-    background: var(--meddle-background);
+    background: var(--bg-gradient);
   }
   .btn-read {
-    background-color: var(--accent);
+    background-color: var(--alternative);
   }
 }
 .blog-card a:hover, .blog-card a:focus {
