--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -41,9 +41,9 @@ const lang = getLangFromUrl(Astro.url);
   --white: #FAFAFA;
   --black: #1D1D1D;
   --primary: #2596BE;
-  --accent: #6D474A;
-  --alternative: #378D99;
-  --meddle-background: linear-gradient(45deg, var(--primary), var(--accent) 30%, var(--primary) 60%);
+  --accent: #2A72B2;
+  --alternative: #E1C546;
+  --bg-gradient: linear-gradient(0deg, var(--primary) 0%, var(--accent) 100%);
 }
 html {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
