--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -146,7 +146,7 @@ const post = Astro.props;
   max-height: 300px;
 }
 .bg-techs {
-  background-color: var(--alternative);
+  background: var(--bg-gradient);;
 
   h2 {
     color: var(--white);
@@ -181,7 +181,7 @@ const post = Astro.props;
     }
   }
   .btn-know {
-    background-color: var(--accent);
+    background-color: var(--alternative);
   }
 }
 </style>
