--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -19,7 +19,7 @@
     }
     .badge:hover, .badge:focus {
         color: white;
-        background: var(--meddle-background);
+        background: var(--bg-gradient);
     }
 }
 
