--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -46,7 +46,7 @@ hr {
     max-width: 150ch;
 }
 .text-gradient {
-    background-image: var(--meddle-background);
+    background-image: var(--bg-gradient);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: 400%;
