--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -41,4 +41,11 @@ const urlWithoutLang = currentUrl.slice(4);   // Remove /{lang}/
   background-color: var(--primary);
   text-decoration: none !important;
 }
+@media (max-width: 600px) {
+  #language-picker li a {
+    font-size: 16px;
+    width: 36px;
+    height: 36px;
+  }
+}
 </style>
