--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -57,6 +57,9 @@ code {
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
+.bg-custom-blue {
+  background-color: var(--accent);
+}
 /* .bg-gradient {
   position: absolute;
   width: 100%;
