--- a/src/pages/[lang]/blog/[category]/index.astro
+++ b/src/pages/[lang]/blog/[category]/index.astro
@@ -37,7 +37,7 @@ const post = Astro.props;
 <MainLayout
   title={`Blog ${param.category} | Kevin Fiorentino`}
   description={`Kevin Fiorentino's blog about ${post.category}`}
-  image={``}
+  image="/kevin.png"
   addWidth={true}
 >
   <div>
