--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -28,7 +28,7 @@ const { collections } = Astro.props;
 <MainLayout
   title={`Blog | Kevin Fiorentino`}
   description={`Kevin Fiorentino's personal blog`}
-  image={``}
+  image="/kevin.png"
   addWidth={true}
 >
   <h1 class="text-gradient">
