--- a/src/pages/[lang]/work-experience.astro
+++ b/src/pages/[lang]/work-experience.astro
@@ -23,7 +23,7 @@ export async function getStaticPaths() {
 <MainLayout
   title={`${t('experience')} | Kevin Fiorentino`}
   description={t('experience.description')}
-  image={``}
+  image="/kevin.png"
   addWidth={true}
 >
   <h1 class="text-gradient">
