--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -27,11 +27,13 @@ const lang = getLangFromUrl(Astro.url);
   ></Head>
 	<body class="bg-gray-100 dark:bg-gray-800">
     <Header></Header>
+    <br>
     <LanguagePicker></LanguagePicker>
     <!-- <div class="bg-gradient flex justify-center"></div> -->
     <main class={`${addWidth ? 'main-width' : ''}`}>
       <slot />
     </main>
+    <br><br>
     <Footer></Footer>
 	</body>
 </html>
@@ -57,10 +59,19 @@ code {
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
+.bg-gradient {
+    background-image: var(--bg-gradient);
+}
 .bg-custom-blue {
   background-color: var(--accent);
 }
-/* .bg-gradient {
+.fill-primary {
+    fill: var(--primary);
+}
+.fill-alternative {
+    fill: var(--alternative);
+}
+/* .bg-gradient2 {
   position: absolute;
   width: 100%;
   height: 75vh;
